--- a/back/package.json
+++ b/back/package.json
@@ -8,9 +8,7 @@
         "build": "npx tsc",
         "start": "node dist/index.js",
         "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\" \"npm --prefix ../front/ run dev\"",
-        "commit": "cd .. && git add . && git commit -m",
-        "lint": "eslint",
-        "push": "cd .. && git push -u origin main"
+        "lint": "eslint"
     },
     "author": "",
     "license": "ISC",
@@ -18,6 +16,7 @@
         "@google-cloud/bigquery": "^6.2.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "express-validator": "^7.0.1",
         "mysql2": "^3.3.1"
     },
     "devDependencies": {
@@ -28,7 +27,6 @@
         "@typescript-eslint/parser": "^5.59.7",
         "concurrently": "^8.0.1",
         "dotenv": "^16.0.3",
-        "eslint": "^8.41.0",
         "nodemon": "^2.0.22",
         "typescript": "^5.0.4"
     }
