--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -12,7 +12,9 @@
     "plugins": ["@typescript-eslint"],
     "rules": {
         "no-console": "error",
-        "@typescript-eslint/no-empty-function": "warn"
+        "@typescript-eslint/no-empty-function": "warn",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["error"]
     },
     "globals": {
         "React": true,
