--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -32,5 +32,5 @@
         ".next/types/**/*.ts",
         "app/context/theme"
     ],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "**/*.cy.tsx"]
 }
