--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@typescript-eslint/parser": "^5.59.7",
         "eslint": "^8.41.0",
         "husky": "^8.0.3",
-        "lint-staged": "^13.2.2"
+        "lint-staged": "^13.2.2",
+        "prettier": "^2.8.8"
     }
 }
