--- a/back/package.json
+++ b/back/package.json
@@ -4,9 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "build": "npx tsc",
-        "start": "node dist/index.js",
+        "start": "node index.js",
         "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\" \"npm --prefix ../front/ run dev\"",
         "lint": "eslint"
     },
