--- a/front/cypress/tsconfig.json
+++ b/front/cypress/tsconfig.json
@@ -3,7 +3,9 @@
         "target": "es5",
         "lib": ["es5", "dom"],
         "types": ["cypress", "node", "./support"],
-        "jsx": "react"
+        "jsx": "react",
+        "resolveJsonModule": true,
+        "esModuleInterop": true
     },
     "include": ["**/*.ts", "support/commands.tsx"]
 }
