--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "prepare": "husky install",
         "lint": "eslint",
-        "format": "npx prettier --write "
+        "format": "npx prettier --write",
+        "dev": "concurrently \"cd back && npx tsc -w\" \" nodemon -q index.js --prefix back\" \"npm run dev --prefix front\"",
+        "test-e2e": "cd front && npx cypress run",
+        "dev:test-e2e": "start-server-and-test dev http://localhost:3000 test-e2e",
+        "pre-commit": "npx lint-staged && cd front && npx cypress run --component && cd ../ && npm run dev:test-e2e"
     },
     "lint-staged": {
         "*.{ts,tsx}": [
@@ -20,9 +23,19 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.59.7",
         "@typescript-eslint/parser": "^5.59.7",
+        "concurrently": "^8.2.0",
         "eslint": "^8.41.0",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.2",
-        "prettier": "^2.8.8"
+        "nodemon": "^2.0.22",
+        "prettier": "^2.8.8",
+        "start-server-and-test": "^2.0.0"
+    },
+    "prettier": {
+        "trailingComma": "none",
+        "tabWidth": 4,
+        "semi": false,
+        "singleQuote": true,
+        "jsxSingleQuote": true
     }
 }
