--- a/back/package.json
+++ b/back/package.json
@@ -4,16 +4,17 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "npx tsc",
+        "compile": "npx tsc",
         "start": "node index.js",
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\" \"npm --prefix ../front/ run dev\"",
         "lint": "eslint"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@google-cloud/bigquery": "^6.2.0",
+        "@google-cloud/functions-framework": "^3.2.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.1.4",
         "express": "^4.18.2",
         "express-validator": "^7.0.1",
         "mysql2": "^3.3.1"
@@ -24,7 +25,6 @@
         "@types/node": "^20.2.3",
         "@typescript-eslint/eslint-plugin": "^5.59.7",
         "@typescript-eslint/parser": "^5.59.7",
-        "dotenv": "^16.1.4",
         "typescript": "^5.0.4"
     }
 }
