--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
         "react-dom": "18.2.0",
         "react-material-ui-carousel": "^3.4.2",
         "recharts": "^2.6.2",
+        "typescript": "^5.1.3",
         "use-places-autocomplete": "^4.0.0"
     },
     "devDependencies": {
@@ -34,7 +35,6 @@
         "eslint": "^8.40.0",
         "eslint-config-next": "^13.4.2",
         "eslint-plugin-react": "^7.32.2",
-        "mysql2": "^3.3.1",
-        "typescript": "^5.0.4"
+        "mysql2": "^3.3.1"
     }
 }
