--- a/front/package.json
+++ b/front/package.json
@@ -30,6 +30,8 @@
         "use-places-autocomplete": "^4.0.0"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.59.11",
+        "@typescript-eslint/parser": "^5.59.11",
         "cypress": "^12.14.0",
         "eslint": "^8.40.0",
         "eslint-config-next": "^13.4.2",
