--- a/.github/main.yml
+++ b/.github/main.yml
@@ -9,10 +9,10 @@ jobs:
             - name: Checkout
               uses: actions/checkout
             - name: Unit test (comp)
-              uses: actions/checkout
-                component: true
+              uses: cypress-io/github-action
+                  component: true
             - name: E2E
-              uses: cypress-io/github-action@v5
+              uses: cypress-io/github-action
               with:
                   start: npm run dev
                   wait-on: 'http://localhost:3000'
