testing github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
               uses: actions/checkout@v3
             - name: Unit test (comp)
               uses: cypress-io/github-action@v5
+              with:
                   component: true
             - name: E2E
               uses: cypress-io/github-action@v5
@@ -17,7 +18,4 @@ jobs:
                   start: npm run dev
                   wait-on: 'http://localhost:3000'
                   install: false
-                  env: IS_DEV=true, NEXT_PUBLIC_IS_DEV=true,  DB_HOST=${{secret.DB_HOST}}, DB_NAME=${{secret.DB_NAME}}, DB_PASSWORD=${{secret.DB_PASSWORD}}, DB_PORT=${{secret.DB_PORT}}, DB_USER=${{secret.DB_USER}}, NEXT_PUBLIC_API=${{secret.NEXT_PUBLIC_API}}, NEXT_PUBLIC_GEOCODING=${{secret.NEXT_PUBLIC_GEOCODING}}, NEXT_PUBLIC_GMAP=${{secret.NEXT_PUBLIC_GMAP}}, PORT=${{secret.PORT}}
-
-
-
+                  env: IS_DEV=true, NEXT_PUBLIC_IS_DEV=true,  DB_HOST=${{secrets.DB_HOST}}, DB_NAME=${{secrets.DB_NAME}}, DB_PASSWORD=${{secrets.DB_PASSWORD}}, DB_PORT=${{secrets.DB_PORT}}, DB_USER=${{secrets.DB_USER}}, NEXT_PUBLIC_API=${{secrets.NEXT_PUBLIC_API}}, NEXT_PUBLIC_GEOCODING=${{secrets.NEXT_PUBLIC_GEOCODING}}, NEXT_PUBLIC_GMAP=${{secrets.NEXT_PUBLIC_GMAP}}, PORT=${{secrets.PORT}}
