testing github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,5 @@ jobs:
             - name: Unit test (comp)
               uses: cypress-io/github-action@v5
               with:
-                  project: './front'
+                  working-directory: front
                   component: true
-            - name: E2E
-              uses: cypress-io/github-action@v5
-              with:
-                  project: './front'
-                  start: npm run dev, cd ../back && node index.js
-                  wait-on: 'http://localhost:3000'
-                  install: false
-                  env: IS_DEV=true, NEXT_PUBLIC_IS_DEV=true,  DB_HOST=${{secrets.DB_HOST}}, DB_NAME=${{secrets.DB_NAME}}, DB_PASSWORD=${{secrets.DB_PASSWORD}}, DB_PORT=${{secrets.DB_PORT}}, DB_USER=${{secrets.DB_USER}}, NEXT_PUBLIC_API=${{secrets.NEXT_PUBLIC_API}}, NEXT_PUBLIC_GEOCODING=${{secrets.NEXT_PUBLIC_GEOCODING}}, NEXT_PUBLIC_GMAP=${{secrets.NEXT_PUBLIC_GMAP}}, PORT=${{secrets.PORT}}
