testing github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
               uses: cypress-io/github-action@v5
               with:
                   working-directory: ./front
-                  start: npm run dev, node index.js --prefix ./back
+                  start: npm run dev, node index.js --prefix ../back
                   wait-on: 'http://localhost:3000'
                   record: true
               env:
