--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,11 @@ jobs:
               uses: actions/checkout@v3
             - name: Install root dependencies
               uses: bahmutov/npm-install@v1
-            - name: Start server in the background
+            - name: Install backend dependencies
+              uses: bahmutov/npm-install@v1
+              with:
+                  working-directory: back
+            - name: Start servers in the background
               run: npm run dev &
             - name: Unit tests
               uses: cypress-io/github-action@v5
