--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
                   DB_PASSWORD: ${{secrets.DB_PASSWORD}}
                   DB_PORT: ${{secrets.DB_PORT}}
                   DB_USER: ${{secrets.DB_USER}}
-                  NEXT_PUBLIC_API: ${{secrets.NEXT_PUBLIC_API}}
+                  NEXT_PUBLIC_API_DEV: ${{secrets.NEXT_PUBLIC_API_DEV}}
                   NEXT_PUBLIC_GEOCODING: ${{secrets.NEXT_PUBLIC_GEOCODING}}
                   NEXT_PUBLIC_GMAP: ${{secrets.NEXT_PUBLIC_GMAP}}
                   PORT: ${{secrets.PORT}}
@@ -43,15 +43,16 @@ jobs:
                   wait-on: 'http://localhost:3000'
                   record: true
               env:
+                  IS_DEV: true
+                  NEXT_PUBLIC_IS_DEV: true
                   CYPRESS_RECORD_KEY: ${{secrets.CYPRESS_RECORD_KEY}}
                   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-                  NEXT_PUBLIC_IS_DEV: ${{secrets.NEXT_PUBLIC_IS_DEV}}
                   DB_HOST: ${{secrets.DB_HOST}}
                   DB_NAME: ${{secrets.DB_NAME}}
                   DB_PASSWORD: ${{secrets.DB_PASSWORD}}
                   DB_PORT: ${{secrets.DB_PORT}}
                   DB_USER: ${{secrets.DB_USER}}
-                  NEXT_PUBLIC_API: ${{secrets.NEXT_PUBLIC_API}}
+                  NEXT_PUBLIC_API_DEV: ${{secrets.NEXT_PUBLIC_API_DEV}}
                   NEXT_PUBLIC_GEOCODING: ${{secrets.NEXT_PUBLIC_GEOCODING}}
                   NEXT_PUBLIC_GMAP: ${{secrets.NEXT_PUBLIC_GMAP}}
                   PORT: ${{secrets.PORT}}
