--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
                   working-directory: front
                   start: npm run dev
                   wait-on: 'http://localhost:3001'
+                  wait-on-timeout: 180
                   record: true
               env:
                   IS_DEV: true
