--- a/back/.eslintrc.json
+++ b/back/.eslintrc.json
@@ -3,6 +3,7 @@
         "node": true,
         "es2021": true
     },
+    "ignorePatterns": ["**/*.js"],
     "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
