--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -1,18 +1,9 @@
 {
     "compilerOptions": {
-        /* Visit https://aka.ms/tsconfig to read more about this file */
-
-        /* Language and Environment */
-        "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-
-        /* Modules */
-        "module": "commonjs" /* Specify what module code is generated. */,
-
-        "esModuleInterop": true /* Emit additional JavaScript to
-        "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-
-        /* Type Checking */
-        "strict": true /* Enable all strict type-checking ,
-        "skipLibCheck": true /* Skip type checking all .d.ts files. */
+        "target": "es2016",
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "strict": true,
+        "outDir": "dist"
     }
 }
