--- a/back/package.json
+++ b/back/package.json
@@ -2,10 +2,9 @@
     "name": "back",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
     "scripts": {
-        "compile": "npx tsc",
-        "start": "node index.js",
+        "start": " nodemon -q index.ts",
+        "compile": "rm -rf ./dist/*.js && npx tsc",
         "lint": "eslint"
     },
     "author": "",
@@ -25,6 +24,7 @@
         "@types/node": "^20.2.3",
         "@typescript-eslint/eslint-plugin": "^5.59.7",
         "@typescript-eslint/parser": "^5.59.7",
+        "ts-node": "^10.9.1",
         "typescript": "^5.0.4"
     }
 }
