--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
     "name": "immoarchive",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
     "scripts": {
         "prepare": "husky install",
         "lint": "eslint",
         "format": "npx prettier --write",
-        "dev": "concurrently \"cd back && npx tsc -w\" \" nodemon -q index.js --prefix back\" \"npm run dev --prefix front\"",
-        "test-e2e": "cd front && npx cypress run",
+        "dev": "concurrently \" npm run start --prefix back\" \"npm run dev --prefix front\"",
         "dev:test-e2e": "start-server-and-test dev http://localhost:3000 test-e2e",
-        "pre-commit": "cd back && npx tsc && cd ../ && npx lint-staged",
+        "pre-commit": "npx lint-staged",
         "pre-push": "cd front && npx cypress run --component && cd ../ && npm run dev:test-e2e",
-        "dev:function": "CLOUD_FUNCTION=true concurrently \"npm run dev --prefix front\" \" cd back && npx tsc && npx functions-framework --target=app --port=5001 [--signature-type=http] \""
+        "dev:function": "CLOUD_FUNCTION=true concurrently \"npm run dev --prefix front\" \" cd back && npm run compile && cd dist && npx functions-framework --target=app --port=5001 [--signature-type=http] \"",
+        "deploy:function": "cd back && npm run compile && cp package.json ./dist && cd dist && sh deployFunction.sh"
     },
     "lint-staged": {
         "*.{ts,tsx}": [
